--- a/SimpleOps/SimpleOps.csproj
+++ b/SimpleOps/SimpleOps.csproj
@@ -9,13 +9,15 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\Nubes\Dropbox\Desarrollos\SimpleOps\Código\SimpleOps\SimpleOps\Documentación\SimpleOps.xml</DocumentationFile>
+    <DocumentationFile>D:\Archivos\Proyectos\SimpleOps\Código\SimpleOps\SimpleOps\Documentación\SimpleOps.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="Librerías\Licencias\Firmador.cs" />
     <Compile Remove="Migrations\20200615212437_[NombreMigración].cs" />
     <Compile Remove="Migrations\20200615212437_[NombreMigración].Designer.cs" />
+    <Compile Remove="Migrations\20201005082050_1.cs" />
+    <Compile Remove="Migrations\20201005082050_1.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,23 +28,23 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="9.0.0" />
-    <PackageReference Include="itext7" Version="7.1.11" />
-    <PackageReference Include="itext7.pdfhtml" Version="3.0.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="itext7" Version="7.1.12" />
+    <PackageReference Include="itext7.pdfhtml" Version="3.0.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.8" />
     <PackageReference Include="QRCoder" Version="1.3.9" />
-    <PackageReference Include="RazorEngineCore" Version="2020.6.1" />
+    <PackageReference Include="RazorEngineCore" Version="2020.9.1" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
