--- a/SimpleOps/SimpleOps.csproj
+++ b/SimpleOps/SimpleOps.csproj
@@ -90,4 +90,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Plantillas\Imagenes\" />
+  </ItemGroup>
+
 </Project>
