--- a/.editorconfig
+++ b/.editorconfig
@@ -2,9 +2,28 @@
 
 dotnet_diagnostic.CA1303.severity = none # CA1303: No pasar cadenas literal como parámetros localizados.
 dotnet_diagnostic.CS1591.severity = none # CS1591: No alertar tipos o miembros públicamente accesibles sin Summary.
-dotnet_diagnostic.CA1812.severity = none # CS1591: No alertar por clases de las que no se crea una instancia.
+dotnet_diagnostic.CA1812.severity = none # CS1812: No alertar por clases de las que no se crea una instancia.
 dotnet_diagnostic.IDE0040.severity = none # IDE0040: No alertar por clases de las que no se crea una instancia (igual que el anterior).
 dotnet_diagnostic.CA1805.severity = none # CA1805: No iniciar variables con sus valores prederminados. Prefiero hacerlo para más claridad al ver la declaración y no tener pensar cuál es el valor predeterminado al estar revisando el código.
 dotnet_diagnostic.CS8524.severity = none # CS8524: La expresión switch no controla algunos valores de su tipo de entrada (no es exhaustiva). Esta advertencia por lo general no es muy útil porque obliga a agregar un caso predeterminado "_ => throw exception"" a los switchs con enumeraciones. Es más útil la advertencia CS8509 que solo sugiere agregar los casos faltantes de la enumeración. Esta advertencia es útil en los casos en los que se usan enumeraciones con flags https://docs.microsoft.com/en-us/dotnet/api/system.flagsattribute.
 file_header_template = Copyright Notice:\n\nSimpleOps® is a free ERP software for small businesses and independents.\nCopyright© 2021 Vixark (vixark@outlook.com).\nFor more information about SimpleOps®, see https://simpleops.net.\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero\nGeneral Public License as published by the Free Software Foundation, either version 3 of the License, or\n(at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY, without even the\nimplied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public\nLicense for more details.\n\nYou should have received a copy of the GNU Affero General Public License along with this program. If not,\nsee https://www.gnu.org/licenses.\n\nThis License does not grant permission to use the trade names, trademarks, service marks, or product names\nof the Licensor, except as required for reasonable and customary use in describing the origin of the Work\nand reproducing the content of the NOTICE file.\n\nRemoving or changing the above text is not allowed.\n
-dotnet_diagnostic.IDE0073.severity = warning
+dotnet_diagnostic.IDE0073.severity = warning # IDE0073: Exige un encabezado igual a la línea anterior para todos los archivos de código.
+
+# Tratar advertencias de nullables como errores. Se deben establecer aquí estas reglas porque por alguna razón no funcionan <WarningsAsErrors>nullable</WarningsAsErrors> en el archivo *.csproj. Los códigos se toman de la segunda respuesta aquí https://stackoverflow.com/questions/58194983/how-to-treat-all-c-sharp-8-nullable-reference-warnings-as-errors.
+
+dotnet_diagnostic.CS8600.severity = error
+dotnet_diagnostic.CS8601.severity = error
+dotnet_diagnostic.CS8602.severity = error
+dotnet_diagnostic.CS8603.severity = error
+dotnet_diagnostic.CS8604.severity = error
+dotnet_diagnostic.CS8613.severity = error
+dotnet_diagnostic.CS8614.severity = error
+dotnet_diagnostic.CS8619.severity = error
+dotnet_diagnostic.CS8620.severity = error
+dotnet_diagnostic.CS8622.severity = error
+dotnet_diagnostic.CS8625.severity = error
+dotnet_diagnostic.CS8629.severity = error
+dotnet_diagnostic.CS8633.severity = error
+dotnet_diagnostic.CS8767.severity = error
+
+# Tratar advertencias de nullables como errores>
