--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-﻿/.vs/SimpleOps
+﻿/.vs/ProjectEvaluation
+/.vs/SimpleOps
 /SimpleOps/obj/Debug/netcoreapp3.1/3z3jddtu.sql
 /SimpleOps/bin
 /SimpleOps/obj
